used record in DTO classes, renamed method in BookMapper